--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "symfony/validator": "4.1.*",
         "symfony/web-link": "4.1.*",
         "symfony/yaml": "4.1.*",
-        "vich/uploader-bundle": "1.8"
+        "vich/uploader-bundle": "1.8",
+        "yamilovs/sms-bundle": "^1.1"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
